# travatar

./: .gitignore  .travis.yml  COPYING  Makefile.am  README  README.md  common.am  configure.ac  err.txt
doc/: decoding-options.html  evaluation.html  index.html  links.html  main.css  model-format.html  parsing.html  preprocessing.html  todo.html  training-guide-ja.html  training-guide.html  training-options.html  tree-converter.html
doc/examples/: analysis-enja.html  analysis-jaen.html
doc/img/: travatar-logo.odg
script/: combine-pt.pl  filter-pt.pl  score-t2s.pl  trace2parse.pl
script/analysis/: gen_analysis_sheet.py
script/analysis/includes/: analysis_sheet.css  highlight.js
script/filter/: filter-enja.pl  filter-infrequent.pl  filter-jaen.pl  filter-null.pl  filter-zhja.pl
script/mert/: densify-nbest.pl  make-init-opt.pl  mert-travatar.pl  nbest-uniq.pl  number-nbest.pl  update-weights.pl
script/preprocess/: preprocess-ja-en.pl  preprocess.pl
script/recaser/: detruecase.pl  train-truecaser.pl  truecase.pl
script/tok/: detok.pl
script/train/: align2lex.pl  clean-corpus.pl  combine-pt.pl  combine-rt.pl  filter-infrequent.pl  filter-model.pl  filter-null.pl  filter-rt.pl  filter-rule-table.py  nbest-uniq.pl  reduce-features.pl  reverse-pt.pl  reverse-rt.pl  score-t2s.pl  symmetrize.pl  train-travatar.pl
script/tree/: han2zen.pl  ja-adjust-dep.pl  ja-dep2cfg.pl  limit-length.pl  lowercase.pl  raise-punc.pl  replace-failed-parse.pl  stanford2oneline.pl  trace2parse.pl
src/: Makefile.am
src/include/: Makefile.am
src/include/trabatar/: config-base.h  config-trabatar-runner.h  symbol-set.h  trabatar-runner.h  util.h
src/include/travatar/: alignment.h  batch-tune-runner.h  binarizer-cky.h  binarizer-directional.h  binarizer.h  caser.h  cfg-data.h  check-equal.h  config-base.h  config-batch-tune.h  config-forest-extractor-runner.h  config-greedy-mert.h  config-hiero-extractor-runner.h  config-mt-evaluator-runner.h  config-mt-segmenter-runner.h  config-rescorer-runner.h  config-tokenizer-runner.h  config-train-caser-runner.h  config-travatar-runner.h  config-travatar-trainer.h  config-tree-converter-runner.h  config.h  config.h.in~  dict.h  eval-measure-adv-interp.h  eval-measure-bleu.h  eval-measure-interp.h  eval-measure-loader.h  eval-measure-nist.h  eval-measure-ribes.h  eval-measure-ter.h  eval-measure-wer.h  eval-measure-zeroone.h  eval-measure.h  forest-extractor-runner.h  forest-extractor.h  generic-string.h  global-debug.h  gradient-xeval.h  gradient.h  (+78 more)
src/kenlm/: Makefile.am  README
src/kenlm/lm/: Makefile.am
src/kenlm/search/: Makefile.am
src/kenlm/util/: Makefile.am
src/lib/: Makefile.am  alignment.cc  batch-tune-runner.cc  binarizer-cky.cc  binarizer-directional.cc  binarizer.cc  caser.cc  cfg-data.cc  config-base.cc  dict.cc  eval-measure-adv-interp.cc  eval-measure-bleu.cc  eval-measure-interp.cc  eval-measure-loader.cc  eval-measure-nist.cc  eval-measure-ribes.cc  eval-measure-ter.cc  eval-measure-wer.cc  eval-measure-zeroone.cc  eval-measure.cc  forest-extractor-runner.cc  forest-extractor.cc  gradient-xeval.cc  gradient.cc  greedy-mert.cc  hiero-extractor-runner.cc  hiero-extractor.cc  hyper-graph.cc  input-file-stream.cc  io-util.cc  lm-composer-bu.cc  lm-composer-incremental.cc  lm-composer.cc  lm-func.cc  lookup-table-cfglm.cc  lookup-table-fsm.cc  lookup-table-hash.cc  lookup-table-hiero.cc  lookup-table-marisa.cc  lookup-table.cc  (+47 more)
src/liblbfgs/: Makefile.am  lbfgs.h  lbfgs.hpp
src/marisa/: COPYING  Makefile.am  README
src/tercpp/: Makefile.am  README.txt  documentStructure.cpp  multiEvaluation.cpp  multiEvaluation.h  segmentStructure.cpp  sgmlDocument.cpp  sgmlDocument.h  terAlignment.cpp  terAlignment.h  tercalc.cpp  tercalc.h  tinyxml.cpp  tinyxmlparser.cpp  tools.cpp  tools.h  xmlStructure.cpp
src/test/: Makefile.am  test-alignment.cc  test-alignment.h  test-base.h  test-binarizer.cc  test-binarizer.h  test-caser.cc  test-caser.h  test-dict.cc  test-dict.h  test-eval-measure.cc  test-eval-measure.h  test-graph-transformer.cc  test-graph-transformer.h  test-hiero-lookup-table.h  test-hiero.cc  test-hiero.h  test-hyper-graph.cc  test-hyper-graph.h  test-io-util.cc  test-io-util.h  test-lm-composer.cc  test-lm-composer.h  test-lookup-table-cfglm.cc  test-lookup-table-fsm.cc  test-lookup-table-fsm.h  test-lookup-table.cc  test-lookup-table.h  test-math-query.cc  test-math-query.h  test-rule-extractor.cc  test-rule-extractor.h  test-tokenizer.cc  test-tokenizer.h  test-trabatar-runner.h  test-trabatar.cc  test-travatar-runner.cc  test-travatar-runner.h  test-travatar.cc  test-tree-io.cc  (+7 more)
src/test/util/: exbleu.py
