include $(top_srcdir)/common.am
nobase_include_HEADERS = \
	travatar/alignment.h \
	travatar/batch-tune-runner.h \
	travatar/binarizer-cky.h \
	travatar/binarizer-directional.h \
	travatar/caser.h \
	travatar/config-base.h \
	travatar/config-batch-tune.h \
	travatar/config-forest-extractor-runner.h \
	travatar/config-hiero-extractor-runner.h \
	travatar/config-mt-evaluator-runner.h \
	travatar/config-train-caser-runner.h \
	travatar/config-travatar-runner.h \
	travatar/config-travatar-trainer.h \
	travatar/config-tree-converter-runner.h \
	travatar/config.h \
	travatar/dict.h \
	travatar/eval-measure-bleu.h \
	travatar/eval-measure-interp.h \
	travatar/eval-measure-ribes.h \
	travatar/eval-measure-ter.h \
	travatar/eval-measure.h \
	travatar/forest-extractor-runner.h \
	travatar/generic-string.h \
	travatar/global-debug.h \
	travatar/graph-transformer.h \
	travatar/hyper-graph.h \
	travatar/input-file-stream.h \
	travatar/io-util.h \
	travatar/lm-composer-bu.h \
	travatar/lm-composer.h \
	travatar/lookup-table-fsm.h
	travatar/lookup-table-hash.h \
	travatar/lookup-table-marisa.h \
	travatar/lookup-table.h \
	travatar/mert-geometry.h \
	travatar/mt-evaluator-runner.h \
	travatar/nbest-list.h \
	travatar/output-collector.h \
	travatar/rule-composer.h \
	travatar/rule-extractor.h \
	travatar/rule-filter.h \
	travatar/sentence.h \
	travatar/sparse-map.h \
	travatar/string-util.h \
	travatar/symbol-set.h \
	travatar/thread-pool.h \
	travatar/timer.h \
	travatar/train-caser-runner.h \
	travatar/translation-rule-hiero.h \
	travatar/translation-rule.h \
	travatar/travatar-runner.h \
	travatar/travatar.h \
	travatar/tree-converter-runner.h \
	travatar/tree-io.h \
	travatar/trimmer-nbest.h \
	travatar/trimmer.h \
	travatar/tune-greedy-mert.h \
	travatar/tune-mert.h \
	travatar/tune.h \
	travatar/tuning-example-forest.h \
	travatar/tuning-example-nbest.h \
	travatar/tuning-example.h \
	travatar/unary-flattener.h \
	travatar/weights-delayed-perceptron.h \
	travatar/weights-pairwise.h \
	travatar/weights-perceptron.h \
	travatar/weights.h
