SUBDIRS = util lm
nobase_include_HEADERS = lm/bhiksha.hh lm/binary_format.hh lm/blank.hh lm/config.hh lm/enumerate_vocab.hh lm/facade.hh lm/left.hh lm/lm_exception.hh lm/max_order.hh lm/model.hh lm/model_type.hh lm/ngram_query.hh lm/quantize.hh lm/read_arpa.hh lm/return.hh lm/search_hashed.hh lm/search_trie.hh lm/trie.hh lm/trie_sort.hh lm/virtual_interface.hh lm/vocab.hh lm/weights.hh lm/word_index.hh util/bit_packing.hh util/ersatz_progress.hh util/exception.hh util/file.hh util/file_piece.hh util/getopt.hh util/have.hh util/joint_sort.hh util/mmap.hh util/murmur_hash.hh util/probing_hash_table.hh util/proxy_iterator.hh util/scoped.hh util/sized_iterator.hh util/sorted_uniform.hh util/string_piece.hh util/tokenize_piece.hh 
